src/app/nav-bar/nav-bar.component.scss
:host {
	min-height: 7.5vh;
	position: sticky;
	top: 2.5vh;
	width: 90%;
	left: 5%;
}

nav {
	width: 100%;
	min-height: 7.5vh;
	background: var(--secondary-bg);
	border-radius: 100vh;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	align-items: center;
	font-size: 2rem;
	border: 5px var(--secondary) solid;
	a {
		text-decoration: none;
		color: var(--primary);
	}
	a::after {
		content: "";
		display: block;
		width: 100%;
		height: 0.5vh;
		border-radius: 100vh;
		background: var(--fancy-gradient);
		scale: 0 1;
		transition: 250ms;
	}
	a:hover::after {
		scale: 1 1;
	}
}

